# lelamp-dev

./: .env.example  .gitignore  .gitmodules  BUILD_PROGRESS.md  CONTRIBUTORS.md  DEVELOPMENT_GUIDE_PI5.md  HARDWARE_PROFILE_PI5.md  LELAMP_PI5_BRINGUP_CN.md  OPENCLAW_LELAMP_PI5_CN.md  PRE_OS_BOOTSTRAP_CN.md  README.md  SPONSORS.md  main.py  pyproject.toml  smooth_animation.py  开发指南.md
3D/: Diffuser.stl  Lamp Base Cover.stl  Lamp Base.stl  LampArm (Base-Elbow).3mf  LampArm (Base-Elbow).stl  LampArm (Elbow-Wrist).3mf  LampArm (Elbow-Wrist).stl  LampArm (Pitch).3mf  LampArm (Wrist-Head).stl  LampBase - Cover.3mf  LampBase.3mf  LampHead - Diffuser.3mf  LampHead.3mf  LampHead.stl
docs/: 0. Prerequisites.md  1. 3D Print.md  2. Servos Setup.md  3. LeLamp Assembly.md  4. LeLamp Setup.md  5. LeLamp Control.md  6. Common Issues.md
host_tools/: com.wujiajun.fluxchi-pi-bridge.plist  pi5_preos_check_macos.sh  pi5_zero_touch.env.example  pi5_zero_touch_seed.sh  start_fluxchi_pi_reverse_tunnel.sh
lelamp/: audio_controls.py  auto_expression.py  expression_engine.py  glm_realtime.py  glyph_player.py  local_voice.py  motion_profiles.py  pose_presets.py  pose_snapshot.py  qwen_realtime.py  remote_control.py  reply_sanitizer.py  runtime_config.py  voice_profile.py  voice_telemetry.py
lelamp_runtime/: .env.example  .gitignore  README.md  main.py  pyproject.toml  smooth_animation.py
scripts/: install_openclaw_skill.sh  leds0_test.c  lelamp.service.example  lelamp_doctor.sh  pi5_all_in_one.sh  pi5_post_reboot_finalize.sh  pi_setup_max.sh  sync_pi_runtime.sh
simulation/: config.json  (+5 more)
(+195 files in other folders)
