[project]
name = "lelamp-runtime"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115,<1.0",
    "feetech-servo-sdk>=1.0.0",
    "lerobot>=0.3.3",
    "livekit-agents[openai]~=1.2",
    "livekit-plugins-noise-cancellation~=0.2",
    "numpy>=2.2.6",
    "pvporcupine>=3.0.5",
    "pvrecorder>=1.2.7",
    "pyarrow==20.0.0",
    "pyaudio>=0.2.14",
    "python-dotenv",
    "sounddevice>=0.5.2",
    "uvicorn[standard]>=0.34,<1.0",
]

[tool.uv.sources]
lerobot = { git = "https://github.com/huggingface/lerobot" }

[project.optional-dependencies]
dev = [
    "httpx>=0.28,<1.0",
    "js2py>=0.74,<1.0",
]

hardware = [
    "adafruit-circuitpython-neopixel",
    "rpi-ws281x",
]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:lelamp main.py is deprecated; use smooth_animation.py.*:DeprecationWarning",
]
